--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -10,8 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Say Hello
-        run: |
-          echo "Hello World!"
+        run: echo "Hello World!"
 
       - name: Now it is
         run: "date"
