--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,4 +1,25 @@
-name: Hello World!
+# name: Hello World!
+
+# on:
+#   push:
+#     branches:
+#       - master
+
+# jobs:
+#   hello_world_job:
+#     runs-on: ubuntu-18.04
+#     steps:
+#       - name: Say hello
+#         run: |
+#           echo "Hello World!"
+#       - name: Now it is
+#         run: |
+#           date
+#       - name: Directory content
+#         run: |
+#           ls -l
+
+name: Deployment pipeline
 
 on:
   push:
@@ -6,15 +27,14 @@ on:
       - master
 
 jobs:
-  hello_world_job:
+  simple_deployment_pipeline:
     runs-on: ubuntu-18.04
     steps:
-      - name: Say hello
-        run: |
-          echo "Hello World!"
-      - name: Now it is
-        run: |
-          date
-      - name: Directory content
-        run: |
-          ls -l
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: npm install
+        run: npm install
+      - name: lint
+        run: npm run eslint
