--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -38,3 +38,5 @@ jobs:
         run: npm install
       - name: lint
         run: npm run eslint
+      - name: npm run test
+        run: npm run test
