--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -34,4 +34,5 @@ jobs:
           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
           heroku_email: ${{ secrets.HEROKU_EMAIL }}
           healthcheck: "https://radiant-stream-72335.herokuapp.com/health"
-          checkstring: "lol"
+          checkstring: "ok"
+          rollbackonhealthcheckfailed: true
