--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -40,3 +40,10 @@ jobs:
         run: npm run eslint
       - name: npm run test
         run: npm run test
+      - name: e2e tests
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: http://localhost:5000
+
