--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -29,6 +29,7 @@ on:
 jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-18.04
+    timeout-minutes: 30
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
