--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -29,7 +29,6 @@ on:
 jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-18.04
-    timeout-minutes: 30
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -46,5 +45,6 @@ jobs:
         with:
           command: npm run test:e2e
           start: npm run start-prod
-          wait-on: http://localhost:5000
+          wait-on: 'http://localhost:5000'
+          wait-on-timeout: 180
 
