--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -43,7 +43,7 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
-          spec: cypress/integration/api.cypress.js
+          # spec: cypress/integration/api.cypress.js
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: 'http://localhost:5000'
