now should not fail

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -52,9 +52,9 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "sirr-pokedex"
           heroku_email: "riku.sarlin@gmail.com"
-#          healthcheck: "https://sirr-pokedex.herokuapp.com/health"
-#          checkstring: "ok"
-#          rollbackonhealthcheckfailed: true
+          healthcheck: "https://sirr-pokedex.herokuapp.com/health"
+          checkstring: "ok"
+          rollbackonhealthcheckfailed: true
         if: ${{ ((github.event_name == 'push') && (!contains(join(github.event.commits.*.message), '#skip')))}}
       - name: Another checkout for tagging to work
         uses: actions/checkout@v2
