Disabled scheduled healthcheck

--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -1,9 +1,12 @@
 name: Periodic healthcheck
 
 on:
-  schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron:  '0/15 8-16 * * 1-5'
+  push:
+    branches:
+      - master
+#  schedule:
+#    # * is a special character in YAML so you have to quote this string
+#    - cron:  '0/15 8-16 * * 1-5'
 
 jobs:
   periodic_healtcheck:
