--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,5 +31,6 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "full-stack-open-pokedex-kh"
           heroku_email: "kari.a.heiskanen@gmail.com" 
-          healthcheck: "https://full-stack-open-pokedex-kh.herokuapp.com/" 
+          healthcheck: "https://full-stack-open-pokedex-kh.herokuapp.com/health"  
+          checkstring: "ok"
 
