--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,7 +24,7 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           command: npm run test:e2e
-          start: npm run start-prod
+          start: npm run start-prodapp
           wait-on: http://localhost:5000
       - uses: akhileshns/heroku-deploy@master
         with:
@@ -33,4 +33,5 @@ jobs:
           heroku_email: "kari.a.heiskanen@gmail.com" 
           healthcheck: "https://full-stack-open-pokedex-kh.herokuapp.com/health"  
           checkstring: "ok"
+          rollbackonhealthcheckfailed: true
 
