--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -27,5 +27,5 @@ jobs:
         uses: anothrNick/github-tag-action@1.36.0
         if: ${{ github.event_name == 'push' }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN  && !contains(join(github.event.commits.*.message, ''), '#skip') }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
