--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,13 +22,8 @@ jobs:
         run: npm run build
       - name: test
         run: npm run test
-
-        
-  e2e_test_job:
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: cypress-io/github-action@v2
       - name: e2e tests
+        uses: cypress-io/github-action@v2
         with:
           command: npm run test:e2e
           start: npm run start-prod
