--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
     "react-router-dom": "^5.2.0"
   },
   "jest": {
-    "testRegex": "(/__tests__/.*|(\\.|/)(spec))\\.[jt]sx?$"
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.[jt]sx?$",
+    "testPathIgnorePatterns": [
+      "./cypress/"
+    ]
   }
 }
