--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,6 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "powerful-falls-19301" #Must be unique in Heroku
           heroku_email: "jtwebapps@gmail.com"
+          healthcheck: "https://powerful-falls-19301.herokuapp.com/health"
+          checkstring: "ok"
+          delay: 3
