--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,7 +32,9 @@ jobs:
           wait-on: http://localhost:5000
       - uses: actions/checkout@v2
       - name: Deploy to Heroku
-        if: ${{ github.event_name == 'push' }}
+        if: | 
+          github.event_name == 'push' &&
+          !contains(github.event.commits.*.message, '#skip')
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action        
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -43,7 +45,9 @@ jobs:
           delay: 3
           rollbackonhealthcheckfailed: true
       - name: Bump version and push tag
-        if: ${{ github.event_name == 'push' }}
+        if: | 
+          github.event_name == 'push' &&
+          !contains(github.event.commits.*.message, '#skip')
         uses: anothrNick/github-tag-action@1.33.0        
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
