--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Deploy to Heroku
         if: | 
           github.event_name == 'push' &&
-          !contains(github.event.commits.*.message, '#skip')
+          !contains(github.event.commits.message, '#skip')
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action        
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -47,7 +47,7 @@ jobs:
       - name: Bump version and push tag
         if: | 
           github.event_name == 'push' &&
-          !contains(github.event.commits.*.message, '#skip')
+          !contains(github.event.commits.message, '#skip')
         uses: anothrNick/github-tag-action@1.33.0        
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
