--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,7 +36,7 @@ jobs:
           COMMIT_MSG: ${{ github.event.commits.message }}
         run: echo "$COMMIT_MSG"
       - name: Deploy to Heroku
-        if: github.event_name == 'push' && !contains(github.event.commits.message, '#skip')
+        if: github.event_name == 'push' && !contains(join(github.event.commits.*.message, ','), '#skip')
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action        
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -47,7 +47,7 @@ jobs:
           delay: 3
           rollbackonhealthcheckfailed: true
       - name: Bump version and push tag
-        if: github.event_name == 'push' && !contains(github.event.commits.message, '#skip')
+        if: github.event_name == 'push' && !contains(join(github.event.commits.*.message, ','), '#skip')
         uses: anothrNick/github-tag-action@1.33.0        
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
