--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -36,7 +36,7 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "pokedexxx_ash" #Must be unique in Heroku
+          heroku_app_name: "pokedexxx-ash" #Must be unique in Heroku
           heroku_email: "teemu.varsala@hotmail.com"
           procfile: true
           
