--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -20,8 +20,8 @@ jobs:
       #- name: lint
       #  run: npm run eslint
 
-      #- name: build
-      #  run: npm run build
+      - name: build
+        run: npm run build
 
     #  - name: test
      #   run: npm test
