--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -40,4 +40,6 @@ jobs:
           heroku_email: "teemu.varsala@hotmail.com"
           procfile: "web: node app.js"
           branch: "master"
+        env:
+          VERSION: ${{ github.run_number}} # just to make sure a new version did actually get deployed
           
