--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "am-thedev-pokedex"
           heroku_email: "austincmckee@gmail.com"
+          healthcheck: "https://am-thedev-pokedex.herokuapp.com/"
+          checkstring: "ok"
