deploy script test

--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
     "cypress:open": "cypress open",
     "test:e2e": "cypress run e2e.js",
 
-    "add-changes": "git add .",
-    "git-commit": "git commit -m 'test commit'",
-    "github-push": "git push origin master",
-    "deploy": "npm run add-changes && npm run git-commit && npm run github-push"
+    "deploy:git": "git add . && git commit -m",
+    "postdeploy:git": "git push origin master"
   },
   "repository": {
     "type": "git",
