--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -36,14 +36,17 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
 
-        if: ${{ github.event_name == 'push' }}
+        
       - name: Bump version and push tag
+        if: ${{ github.event_name == 'push' && !contains(github.event.head_commit.message, '')}}
         uses: anothrNick/github-tag-action@1.33.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
 
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+      - name: Deploy to heroku
+        if: ${{ github.event_name == 'push' && !contains(github.event.head_commit.message, '') }}
+        uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "pokedexxx-ash" #Must be unique in Heroku
