--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -39,7 +39,7 @@ jobs:
         
       - name: Bump version and push tag
         if: ${{ github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip')}}
-        uses: anothrNick/github-tag-action@github-tag-action@eca2b69f9e2c24be7decccd0f15fdb1ea5906598
+        uses: anothrNick/github-tag-action@1.33.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
