--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "description": "Full Stack Open",
   "main": "src/index.js",
   "scripts": {
+    "/1/": "---STARTING---",
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
+
+    "/2/": "---TESTING---",
     "test": "jest",
-    "eslint": "eslint './**/*.{js,jsx}'",
-    "build": "webpack --mode production",
     "cypress:open": "cypress open",
     "test:e2e": "cypress run e2e.js",
+    
+    "/3/": "---LINTING---",
+    "eslint": "eslint './**/*.{js,jsx}'",
 
+    "/4/": "---BUILDING---",
+    "build": "webpack --mode production",
+
+    "/5/": "---DEPLOYING---",
     "deploy:git": "git add . && git commit -m",
     "postdeploy:git": "git push origin master"
   },
