--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,4 +32,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
           heroku_email: ${{secrets.HEROKU_EMAIL}}
-          healthcheck: https://http://${{secrets.HEROKU_APP_NAME}}.herokuapp.com/health
+          healthcheck: http://${{secrets.HEROKU_APP_NAME}}.herokuapp.com/health
