--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,6 +22,14 @@ jobs:
         run: npm run eslint
       - name: build
         run: npm run build
+      - name: success on deploy
+        if: ${{ failure() }}
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took                                     
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: test
         run: npm run test
       - name: e2e tests
@@ -39,6 +47,14 @@ jobs:
           heroku_email: ${{secrets.HEROKU_EMAIL}}
           healthcheck: http://${{secrets.HEROKU_APP_NAME}}.herokuapp.com/health
           rollbackonhealthcheckfailed: true
+      - name: success on deploy
+        if: ${{ success() }}
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       - uses: actions/checkout@v2
       - name: Bump version and push tag
         if: ${{ github.event_name == 'push' && ( ! contains(join(toJson(github.event.commits.*.message)), '#skip') ) }}
