--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   check_health:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: Check the deployed service URL
         uses: jtalk/url-health-check-action@v2
