--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -7,10 +7,9 @@ on:
 
 jobs:
   check_health:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - name: Check the deployed service URL
         uses: jtalk/url-health-check-action@v2
         with:
           url: https://${{secrets.HEROKU_APP_NAME}}.herokuapp.com/health|https://${{secrets.HEROKU_APP_NAME}}.herokuapp.com
-          follow-redirect: no
