--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,15 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World"
+
+  date_job:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Date
+        run: date
+
+  ls_job:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: ls
+        run: ls -l
