--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start-prod": "node app.js",
     "test": "jest",
     "eslint": "eslint './**/*.{js,jsx}'",
-    "cypress:open": "cypress open",
+    "cypress": "cypress open",
 		"test:e2e": "cypress run",
     "build": "webpack --mode production"
   },
