--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
+		"fake":"node",
     "test": "jest",
     "eslint": "eslint './**/*.{js,jsx}'",
     "cypress": "cypress open",
