--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,6 +19,8 @@ jobs:
         run: npm install
       - name: lint
         run: npm run lint
+      - name: build
+        run: npm run build
       - name: unit test
         run: npm run test
       - name: e2e tests
