--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,9 +15,7 @@ jobs:
           node-version: '12.x'
       - name: npm install 
         run: npm install  
-      - name: e2e tests
-        uses: cypress-io/github-action@v2
-        with:
-          command: npm run test:e2e
-          start: npm run start-prod
-          wait-on: http://localhost:5000
+      - name: lint
+        run: npm run eslint
+      - name: run test
+        run: npm run test
