--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,3 +19,12 @@ jobs:
         run: npm run eslint
       - name: run test
         run: npm run test
+      - name: build
+        run: npm run build
+      - uses: akhileshns/heroku-deploy@v3.12.12
+        if: ${{ github.event_name == 'push' && !contains(join(toJson(github.event.commits.*.message)), '#skip') }}
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: 'fullstack-2021-part11'
+          heroku_email: 'dimitris12313@hotmail.com'
+
