--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,3 +15,6 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_TOKEN}}
           heroku_app_name: "pokedex-pp" #Must be unique in Heroku
           heroku_email: "pashov@ymail.com"
+          healthcheck: "https://pokedex-pp.herokuapp.com/health"
+          checkstring: "ok"
+          delay: 5
