--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,3 +37,4 @@ jobs:
           heroku_email: 'vu.nguyen101@gmail.com'
           healthcheck: 'https://pokedex9.herokuapp.com/health'
           checkstring: 'ok'
+          delay: 5
