--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,7 +37,7 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: 'pokedex9' #Must be unique in Heroku
+          heroku_app_name: 'pokedex9'
           heroku_email: 'vu.nguyen101@gmail.com'
           healthcheck: 'https://pokedex9.herokuapp.com/health'
           checkstring: 'ok'
