--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: 'sandesh-pokemon'
           heroku_email: 'sundesz@gmail.com'
+          healthcheck: 'https://sandesh-pokemon.herokuapp.com/health'
+          checkstring: 'ok'
