--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,6 +33,6 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: 'sandesh-pokemon'
           heroku_email: 'sundesz@gmail.com'
-          healthcheck: 'https://sandesh-pokemon.herokuapp.com/health'
-          checkstring: 'ok'
-          rollbackonhealthcheckfailed: true
+          # healthcheck: 'https://sandesh-pokemon.herokuapp.com/health'
+          # checkstring: 'ok'
+          # rollbackonhealthcheckfailed: true
