--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Full Stack Open",
   "main": "src/index.js",
   "scripts": {
-    
     "start-dev": "webpack-dev-server --open --mode development",
-    
+    "start-prod": "node app.js",
     "start": "node app.js",
     "test": "jest",
     "eslint": "eslint './**/*.{js,jsx}'",
