--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,4 +32,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "peaceful-inlet-15469"
           heroku_email: ${{secrets.HEROKU_EMAIL}}
-
+          checkstring: "ok"
+          rollbackonhealthcheckfailed: true
