--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,4 @@ jobs:
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
         run: echo "$COMMIT_MESSAGES"
-      - name: test messages
-        run: echo "$COMMIT_MESSAGES"
+        if: ${{ COMMIT_MESSAGES.includes('#skip') }}
