--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Testing stuff
 on:
   push:
     branches:
-      - master
+      - dev
 
 jobs:
   a_test_job:
@@ -26,6 +26,9 @@ jobs:
         env:
           HEAD_COMMIT_MESSAGES: ${{ toJson(github.event.head_commit.message) }}
         run: echo "$HEAD_COMMIT_MESSAGES"
+        if: "!contains(github.event.head_commit.message, '#skip')"
       - name: Logging
+        env:
+          GIT_EVENT: ${{ toJson(github.event.commits) }}
         run: |
-          echo "${{ toJSON(github.event) }}"
+          echo "$GIT_EVENT"
