--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,6 @@ jobs:
         if: "!contains(github.event.head_commit.message, '#skip')"
       - name: Logging
         env:
-          GIT_EVENT: ${{ toJson(github.event.commits) }}
+          GIT_EVENT: ${{ toJson(github.event) }}
         run: |
           echo "$GIT_EVENT"
