--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,11 +37,13 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: 'sandesh-pokemon'
           heroku_email: 'sundesz@gmail.com'
+          dontuseforce: 1
           # healthcheck: 'https://sandesh-pokemon.herokuapp.com/health'
           # checkstring: 'ok'
           # rollbackonhealthcheckfailed: true
       - uses: actions/checkout@v2
       - name: Bump version and push tag
+        # https://docs.github.com/en/developers/webhooks-and-events/webhooks/webhook-events-and-payloads#push
         if: ${{ github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip')}}
         uses: anothrNick/github-tag-action@1.33.0
         env:
