--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -41,7 +41,7 @@ jobs:
           # healthcheck: 'https://sandesh-pokemon.herokuapp.com/health'
           # checkstring: 'ok'
           ## rollbackonhealthcheckfailed: true
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@eca2b69f9e2c24be7decccd0f15fdb1ea5906598
       - name: Bump version and push tag
         # https://docs.github.com/en/developers/webhooks-and-events/webhooks/webhook-events-and-payloads#push
         if: ${{ github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip')}}
