--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: '40 * * * *'
+    - cron: '55 * * * *'
 
 jobs:
   periodic_health_check:
@@ -18,9 +18,13 @@ jobs:
           url: https://sandesh-pokemon.herokuapp.com/health
           # Follow redirects, or just report success on 3xx status codes
           follow-redirect: false # Optional, defaults to "no"
+          # TypeError: Input does not meet YAML 1.2 "Core Schema" specification: follow-redirect
+          # Support boolean input list: `true | True | TRUE | false | False | FALSE`
           # Fail this action after this many failed attempts
           max-attempts: 3 # Optional, defaults to 1
           # Delay between retries
           retry-delay: 5s # Optional, only applicable to max-attempts > 1
           # Retry all errors, including 404. This option might trigger curl upgrade.
-          retry-all: no # Optional, defaults to "no"
+          retry-all: false # Optional, defaults to "no"
+          # TypeError: Input does not meet YAML 1.2 "Core Schema" specification: retry-all
+          # Support boolean input list: `true | True | TRUE | false | False | FALSE`
