--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: '55 * * * *'
+    - cron: '0 0 1 * *'
 
 jobs:
   periodic_health_check:
