--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,3 +12,7 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
+      -name: Today is
+        run: date
+      -name: Content of directory
+        run: ls -l
