--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -10,11 +10,10 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - name: Say hello
-        run: |
-          echo "Hello World!"
+        run:  echo "Hello World!"
 
       - name: Today is
         run: date
-        
+
       - name: Content of directory
         run: ls -l
