--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,4 +26,4 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: build
-        run: npm run build
+        run: npm build
