--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,7 +18,7 @@ jobs:
       - name: lint
         run: npm run eslint
       - name: test
-        run: npm test
+        run: npm run test
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
@@ -26,4 +26,4 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: build
-        run: npm build
+        run: npm run build
