--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "fullstackopen-cicd",
   "version": "1.0.0",
   "description": "Full Stack Open",
-  "main": "src/index.js",
   "scripts": {
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
     "test": "jest",
-    "eslint": "eslint './**/*.{js,jsx}'",
-    "build": "webpack --mode production",
     "cypress:open": "cypress open",
-    "test:e2e": "cypress run"
+    "test:e2e": "cypress run",
+    "eslint": "eslint './**/*.{js,jsx}'",
+    "build": "webpack --mode production"
+    
   },
   "repository": {
     "type": "git",
