heroku production job added

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,3 +28,10 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       
+      -name: heroku deploy
+       uses: akhileshns/heroku-deploy@v3.12.12
+       with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "pacific-forest-01186"
+          heroku_email: "pasangnurusherpa72@gmail.com"
+      
