deploy health check

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,4 +33,6 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "pacific-forest-01186"
           heroku_email: "pasangnurusherpa72@gmail.com"
-      
+          healthcheck: "https://pacific-forest-01186.herokuapp.com/health"
+
+
