--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: "12.x"
       - name: npm install
         run: npm install
-      - name: lint
+      - name: lintigin
         run: npm run eslint
       - name: build
         run: npm run build
