--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,5 +12,7 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
-      - name: Date
+      - name: Now it is
         run: date
+      - name: Directory content
+        run: ls -l
