--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production",
-    "tests:e2e": "cypress open"
+    "tests:e2e": "cypress run"
   },
   "repository": {
     "type": "git",
